@@ -15,6 +15,7 @@
 - exended `Total.download()` by adding `size {Number}` property to the response
 - extended FlowStream by adding the ability to execute Total.js actions
 - added a new global event `ON('flowstream', function(instance) {`
+- added new action methods `$.progress(percentage)` and `ACTION().progress(console.log)` to measure percentage
 
 ========================
 0.0.15
